tests/negative/symbols/uppercase_fn.orng
// uppercase_fn.orng:5:3: error: symbol `Lol` must start with an lowercase letter
// fn Lol() -> Int { 4 }
//  ^
// 
fn Lol() -> Int { 4 }